add: (ubuntu) 1.1.1.1 Ensure cramfs kernel module is not available (Automated)
